Describe what you changed, e.g. updated donate form and projectaahar page

--- a/donateform.html
+++ b/donateform.html
@@ -103,7 +103,7 @@
                     </div>
                 </form>
                 <!-- Direct payment link button -->
-                <a href="https://rzp.io/rzp/tBO1hoV" class="btn btn-outline-success btn-lg mt-2" target="_blank" rel="noopener">Donate Now</a>
+                <a href="https://rzp.io/rzp/yM0zHaqc" class="btn btn-outline-success btn-lg mt-2" target="_blank" rel="noopener">Donate Now</a>
                 <hr>
             </div>
             <div class='col'></div>
